added support for stock exceeding

--- a/public/css/components/shopping-cart.css
+++ b/public/css/components/shopping-cart.css
@@ -110,6 +110,11 @@
     color: var(--content-text-primary);
 }
 
+.quantity-control span.exceeds-stock {
+    color: var(--error);
+    font-weight: bold;
+}
+
 .cart-total-container {
     display: flex;
     justify-content: space-between;
